# mallinicouture

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: adv_indicator.xml  adv_indicator_selector.xml  adv_selected_indicator.xml
app/src/main/res/layout/: activity_bottom_navigation.xml  activity_credit_card.xml  activity_gallery.xml  activity_login.xml  activity_main.xml  cardview_gallery.xml  cardview_main_category.xml  fragment_card_back.xml  fragment_card_front.xml  fragment_ccname.xml  fragment_ccnumber.xml  (+7 more)
docs/ppo/: lab1.md
docs/ppo/assets/: ER.drawio  Use-case.drawio  uml.drawio
gradle/wrapper/: gradle-wrapper.properties
mallinicouture-back-end/: build.gradle
mallinicouture-back-end/db-init/: categories.json  dresses.json  images.json  index.js
mallinicouture-back-end/gradle/wrapper/: gradle-wrapper.properties
mallinicouture-back-end/src/main/resources/: application.properties
university/desktop/4курс/1семестр/Computer networks/lab_03_comp_net/: CMakeLists.txt  HttpCodes.cpp  HttpCodes.h  Makefile  RequestParser.cpp  RequestParser.h  ResponseParser.cpp  ResponseParser.h  Statistic.cpp  Statistic.h  ThreadPool.cpp  ThreadPool.hpp  client.cpp  server.cpp  util.cpp  util.h
university/desktop/4курс/1семестр/Computer networks/lab_03_comp_net/static/: text.txt  web.html
university/desktop/live/music/: upr1.mp3.asd
university/desktop/live/upr2 Project/: upr2.als
university/desktop/live/urok3 Project/: urok3.als
university/desktop/АМ - I АM INNOVATION/: Calc.xlsx
(+348 files in other folders)
